fix spacings, getInspired for mobile

--- a/src/components/content/Elements/elements.sass
+++ b/src/components/content/Elements/elements.sass
@@ -32,10 +32,13 @@
 
   &__text
     margin-top: 30px
-    margin-bottom: 40px
+  
+  &__link
+    margin-top: 40px
   
   @media only screen and (max-width: $phone)
     padding: 80px 30px 0
+    margin-bottom: 25px
 
     &__item
       margin-bottom: 80px
