--- a/src/components/content/Partners/partners.sass
+++ b/src/components/content/Partners/partners.sass
@@ -22,5 +22,4 @@
     justify-content: flex-start
 
   @media only screen and (max-width: $phone)
-    &__item
-      width: 170px
+    padding-bottom: 50px
