--- a/src/components/content/Project/project.sass
+++ b/src/components/content/Project/project.sass
@@ -45,9 +45,10 @@
     max-width: 305px
   
   @media only screen and (max-width: $phone)
-    margin-bottom: 50px
+    margin-bottom: 20px
     padding-right: 30px
     padding-left: 30px
+    padding-bottom: 0
 
     &::before, &::after
       top: 53%
